# Line-Following-Robot

./: CMakeLists.txt  README.md
Archive (slower robot code and video)/: image_filter_node.cpp  motor_controller.cpp  motor_driver_node.cpp  robot_news_station.cpp
faster_src/: image_filter_node.cpp  line_follower_node.cpp
faster_src/Archive Test Nodes/: 5 Parmaters.py
faster_src/install/: setup.sh
src/: camera_driver_node.cpp  motor_controller.cpp
src/install/: local_setup.sh
src/log/: latest_build
